# container

./: .gitignore  CHANGELOG.md  FILES.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tree.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: docs.yml
config/: templates.conf
docker/: Dockerfile  Dockerfile.dev  docker-compose.dev.yml  entrypoint.sh
docs/: cli-reference.md  python-api.md
docs/api/: index.md
docs/assets/templates/website/: bootstrap.html  default.html  tailwind.html
docs/examples/: batch-processing.md  web-integration.md
docs/guides/: advanced-examples.md  advanced.md  getting-started.md  troubleshooting.md
examples/advanced_workflows/: batch_processing.py  documentation_bundle.py  project_backup.py
examples/basic_usage/: basic_export.py  simple_import.py
examples/web_integration/: django_integration.py  fastapi_app.py  flask_app.py
scripts/: build.py  generate_docs.py  release.py  setup_dev.py  test_coverage.py  update_version.py
svgg/: __init__.py  constants.py  exceptions.py  version.py
svgg/cli/: main.py  utils.py
svgg/cli/commands/: batch_cmd.py  changelog_cmd.py  config_cmd.py  create_cmd.py  exclude_cmd.py  export_cmd.py  extract_doc_cmd.py  extract_html_cmd.py  import_cmd.py  info_cmd.py  list_cmd.py  metadata_cmd.py  server_cmd.py  utils_cmd.py  validate_cmd.py
svgg/cli/completion/: bash.py  fish.py  powershell.py  zsh.py
svgg/config/: config_manager.py  defaults.py  validation.py
svgg/core/: base64_handler.py  file_handler.py  metadata_manager.py  structure_manager.py  svg_generator.py  svg_parser.py
svgg/exporters/: base_exporter.py  batch_exporter.py  doc_exporter.py  file_exporter.py  url_exporter.py  web_exporter.py  zip_exporter.py
svgg/extractors/: content_extractor.py  file_extractor.py  structure_extractor.py
svgg/importers/: base_importer.py  directory_importer.py  file_importer.py  multi_importer.py  project_importer.py  repository_importer.py  smart_importer.py  url_importer.py  zip_importer.py
svgg/listers/: file_lister.py  svg_lister.py  tree_formatter.py
svgg/server/: __init__.py  app.py  client.py  utils.py
svgg/server/middleware/: auth.py  cors.py  rate_limiting.py
svgg/server/routes/: export_routes.py  health_routes.py  import_routes.py  info_routes.py
svgg/utils/: compression_utils.py  encoding_utils.py  file_utils.py  git_utils.py  logger.py  template_utils.py  url_utils.py
svgg/validators/: file_validator.py  metadata_validator.py  structure_validator.py  svg_validator.py
tests/: conftest.py  test_utils.py
tests/integration/: test_batch_operations.py  test_cli_commands.py  test_server_api.py  test_workflows.py
tests/performance/: benchmarks.py  test_batch_performance.py  test_large_files.py
tools/: dependency_check.py  format.py  lint.py  security_check.py
