[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sva"
version = "1.0.7"
description = "A modular document processing pipeline for Markdown to PDF/SVG/PNG conversion with OCR"
authors = [
    { name = "Tom Sapletta", email = "info@softreck.dev" }
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.urls]
homepage = "https://github.com/veridock/container"

[project.scripts]
container = "__main__:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["processor", "processor.*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
