[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "svgg"
version = "0.1.8"
description = "SVG Generator - Universal tool for creating enhanced SVG files with embedded content, Procesor metadanych - tworzenie i rozszerzanie metadanych w oparciu o pliki źródłowe poprzez usługi i bibliotekii"
authors = ["Tom Sapletta <info@softreck.dev>"]
maintainers = ["SVGG Development Team <dev@svgg.org>"]
license = "Apache-2.0"
readme = "README.md"

keywords = [
    "svg", "vector", "graphics", "embedding", "base64",
    "documents", "archive", "bundle", "web", "export"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Text Processing :: Markup :: XML",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = ">=3.8"
click = "^8.0.0"
requests = "^2.25.0"
lxml = "^4.6.0"
pillow = "^8.0.0"
jinja2 = "^3.0.0"
pyyaml = "^6.0"
gitpython = "^3.1.0"
python-magic = "^0.4.24"
tqdm = "^4.60.0"
colorama = "^0.4.4"

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
